sefkhet-abwy-chatbot/base/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: sefkhet-abwy-chatbot
spec:
  replicas: 1
  selector:
    app.kubernetes.io/component: sefkhet-abwy-chatbot
    app.kubernetes.io/managed-by: aicoe-thoth-devops
    app.kubernetes.io/name: thoth
    deploymentconfig: sefkhet-abwy-chatbot
  template:
    metadata:
      labels:
        app.kubernetes.io/component: sefkhet-abwy-chatbot
        app.kubernetes.io/managed-by: aicoe-thoth-devops
        app.kubernetes.io/name: thoth
        deploymentconfig: sefkhet-abwy-chatbot
    spec:
      containers:
        - env:
            - name: PYTHONPATH
              value: .
            - name: PORT
              value: "8080"
            - name: APP_SCRIPT
              value: chatbot
            - name: GITHUB_ACCESS_TOKEN
              valueFrom:
                secretKeyRef:
                  key: sesheta-srcops-access-token
                  name: sefkhet-abwy-chatbot
          image: sefkhet-abwy-chatbot
          name: sefkhet-abwy-chatbot
          ports:
            - containerPort: 8080
              protocol: TCP
  test: false
  triggers:
    - type: ConfigChange
