sefkhet-abwy-chatbot/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sefkhet-abwy-chatbot
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: sefkhet-abwy-chatbot
