sefkhet-abwy-chatbot/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sefkhet-abwy-chatbot
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sefkhet-abwy-chatbot
    weight: 100
